--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -2,6 +2,7 @@
   margin: 10px auto;
   padding: 20px;
   max-width: 600px;
+  min-height: 420px;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
